--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -83,6 +83,7 @@
   justify-content: center;
   padding: 16px;
   color: #fff;
+  font-size: 15px;
   &:hover {
     background: #bc1616;
   }
@@ -201,6 +202,9 @@
       line-height: 53px;
       max-width: 80%;
       margin: 0 auto 25px;
+    }
+    @media(max-width: 480px) {
+      max-width: 100%;
     }
 
     &.section__title_left {
