--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -88,6 +88,7 @@
   }
 
   .select__option {
+    z-index: 59;
   }
 
   .select__btn {
@@ -99,6 +100,10 @@
   .select__link {
     text-align: left;
     padding-left: 21px;
+    z-index: 60;
+    input {
+      z-index: 61;
+    }
   }
 
   .select.open {
