--- a/src/scss/banner.scss
+++ b/src/scss/banner.scss
@@ -101,11 +101,17 @@
 
     &__btn {
         margin-top: 37px;
+        font-size: 17px;
+        line-height: 20px;
+        font-weight: 600;
         display: inline-block;
-        padding: 16px 20px;
+        padding: 20px 30px;
         @media (max-width: 767px) {
             padding: 16px;
             margin-top: 30px;
+            font-size: 15px;
+            line-height: 18px;
+            font-weight: 400;
         }
     }
 }
