--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -30,13 +30,15 @@
     svg {
       margin-right: 7px;
     }
-    font-size: 12px;
-    line-height: 14px;
-    /* opacity: 0.7; */
     span {
       font-size: 15px;
       line-height: 18px;
       opacity: 1;
+      &:nth-child(2) {
+        opacity: 0.7;
+        font-size: 12px;
+        line-height: 14px;
+      }
     }
   }
 
